scrollbar edits and fixes

--- a/style.css
+++ b/style.css
@@ -48,10 +48,13 @@ html.is-animating .transition-y {
     mix-blend-mode: exclusion !important;
     box-sizing: initial !important;
     transition: opacity 0.7s cubic-bezier(0.2, 0.7, 0, 1),
+                transform 0.45s cubic-bezier(0.3, 0.55, 0, 1),
                 visibility 0.7s, top 0.3s, right 0.3s, bottom 0.3s, left 0.3s !important;
 }
 .os-scrollbar.os-scrollbar-auto-hidden {
-    transition: opacity 0.8s cubic-bezier(0.35, 0.7, 0, 1),
+    transform: scaleY(1.01) translateX(100%);
+    transition: opacity 0.6s cubic-bezier(0.6, 0.6, 0, 1),
+                transform 0.6s 75ms cubic-bezier(0.4, 0.25, 0, 1),
                 visibility 0.8s, top 0.3s, right 0.3s, bottom 0.3s, left 0.3s !important;
 }
 .os-scrollbar-track {
@@ -548,8 +551,7 @@ div[project-popup] {
     word-wrap: break-word;
     transition-property: top, left, opacity;
     box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: hidden !important;
+    overflow: hidden !important;
 }
 .project-popup section.pp-project {
     transition: transform 0.8s cubic-bezier(0.35, 0.65, 0, 1),
